--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.3.0",
-    "commander": "^2.16.0"
+    "commander": "^2.16.0",
+    "ts-node": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.5.2",
